fixing the alignement of some pictures

--- a/public/css/pages/_mediaDetail.css
+++ b/public/css/pages/_mediaDetail.css
@@ -173,6 +173,7 @@
 .cast-member {
     text-align: center;
     flex-direction: column;
+    justify-content: start;
 }
 .cast-member img {
     width: 80px; /* Size for cast images */
